@@ -1,1 +1,1 @@
-Theppitak Karoonboonyanan  <thep@linux.thai.net>
+Theppitak Karoonboonyanan  <theppitak@gmail.com>
